--- a/index.html
+++ b/index.html
@@ -13,18 +13,27 @@
 
 <body>
     <div class="container">
-        <h1>Calculate Me</h1>
+        <h1><u>Calculator</u></h1>
 
-        <form action="/action_page.php" onsubmit="add()">
+        <form>
             <div class="form-group">
                 <label class="num1">Number:</label>
                 <input type="number" id="num1">
             </div>
 
             <div class="calculations">
-                <form action="/action_page.php">
-                    <input type="checkbox" id="add" name="add" value="+" checked>
+                <form>
+                    <input type="checkbox" id="add" name="add" value="+">
                     <label for="add">+</label><br>
+
+                    <input type="checkbox" id="subtract" name="subtract" value="-">
+                    <label for="subtract">-</label><br>
+
+                    <input type="checkbox" id="multiply" name="multiply" value="*">
+                    <label for="multiply">*</label><br>
+
+                    <input type="checkbox" id="divide" name="divide" value="÷">
+                    <label for="divide">÷</label><br>
                 </form>
             </div>
 
@@ -33,8 +42,12 @@
                 <input type="number" id="num2">
             </div>
             <br>
-            <button onclick="add()">Calculate</button>
-
+            <div class="res">
+                <button onclick="calculate()">Calculate</button>
+                <br>
+                <h2>Result:</h2>
+                <h2 id="result"></h2>
+            </div>
         </form>
     </div>
 </body>
